# simple_sdf

./: .gitignore  README.md  simple_sdf.ecf
Clib/minifb/: MiniFB.h  simple_minifb.h
Clib/raylib/: CMakeLists.txt  simple_raylib.h  simple_raylib_impl.c
demo/: sdf_dynamic_demo.e  sdf_gpu_demo.e  sdf_minifb_demo.e  sdf_quick_demo.e  sdf_raylib_demo.e  sdf_village_demo.e  sdf_vision_demo.e  sdf_vulkan_demo.e
docs/: GPU_ACCELERATION_PLAN.md  index.html
drift/: api-SIMPLE_SDF.txt  drift-analysis.md
research/: sdf.txt
shaders/: sdf_raymarcher.frag
specs/: S01-PROJECT-INVENTORY.md  S02-CLASS-CATALOG.md  S03-CONTRACTS.md  S04-FEATURE-SPECS.md  S05-CONSTRAINTS.md  S06-BOUNDARIES.md  S07-SPEC-SUMMARY.md  S08-VALIDATION-REPORT.md
src/: simple_sdf.e
src/glsl/: glsl_builder.e  sdf_glsl_builder.e
src/operations/: sdf_ops.e
src/primitives/: sdf_box.e  sdf_capsule.e  sdf_cylinder.e  sdf_plane.e  sdf_shape.e  sdf_sphere.e  sdf_torus.e
src/quick/: sdf_quick.e
src/rendering/: sdf_ray_hit.e  sdf_ray_marcher.e
src/scene/: sdf_scene.e  sdf_scene_entry.e
src/vectors/: sdf_vec2.e  sdf_vec3.e
src/visualization/minifb/: minifb_buffer.e  minifb_window.e  simple_minifb.e
src/visualization/raylib/: raylib_buffer.e  raylib_gpu_renderer.e  simple_raylib.e
src/visualization/vision/: sdf_vision_renderer.e
testing/: lib_tests.e  test_app.e
